--- a/education.html
+++ b/education.html
@@ -5,10 +5,8 @@
     <meta name="description" content="My Education: Discover my academic background in Website Design Development, including degrees, courses, and certifications.">
     <meta name="keywords" content="education, web design, HTML, CSS, diploma, courses, certifications">
     <title>Education - Website Design Development</title>
-    <!-- Google Fonts for better typography -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="stylecss.css">
     <style>
         :root {
             --primary-color: #b2967d; 
@@ -280,4 +278,5 @@
 </footer>
 
 </body>
+
 </html>
