--- a/experience.html
+++ b/experience.html
@@ -5,10 +5,8 @@
     <meta name="description" content="My Experience: Explore my professional journey in Website Design Development, including projects, roles, and achievements.">
     <meta name="keywords" content="experience, web design, HTML, CSS, portfolio, projects, skills">
     <title>Experience - Website Design Development</title>
-    <!-- Google Fonts for better typography -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="stylecss.css">
     <style>
         :root {
             --primary-color: #b6a6ca; 
@@ -349,3 +347,4 @@
 
 </body>
 </html>
+
