--- a/gallery.html
+++ b/gallery.html
@@ -5,10 +5,8 @@
     <meta name="description" content="Gallery: Explore my visual portfolio in Website Design Development, including projects, mockups, and inspirations.">
     <meta name="keywords" content="gallery, portfolio, images, memories">
     <title>Gallery Ezrynn</title>
-    <!-- Google Fonts for better typography -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
-    <!-- Font Awesome for icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="stylecss.css">
     <style>
         :root {
             --primary-color: #77c3ec; 
@@ -306,3 +304,4 @@
 
 </body>
 </html>
+
